--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@astrojs/sitemap": "^3.0.3",
     "@astrojs/tailwind": "^5.0.2",
     "@headlessui/react": "^1.7.17",
+    "@headlessui/tailwindcss": "^0.2.0",
     "@types/react": "^18.2.33",
     "@types/react-dom": "^18.2.14",
     "astro": "^3.3.2",
