--- a/.github/workflows/build-and-deploy-production.yml
+++ b/.github/workflows/build-and-deploy-production.yml
@@ -26,11 +26,12 @@ jobs:
       - name: Build project
         run: npm run build
 
-      - name: Deploy to server
-        uses: SamKirkland/FTP-Deploy-Action@v4.3.4
+      - name: SFTP uploader
+        uses: wangyucode/sftp-upload-action@v2.0.2
         with:
-          server: ${{ secrets.FTP_SERVER }}
+          host: ${{ secrets.FTP_SERVER }}
           username: ${{ secrets.FTP_USERNAME }}
           password: ${{ secrets.FTP_PASSWORD }}
-          local-dir: dist/
-          server-dir: www/
+          compress: false
+          localDir: dist/
+          remoteDir: www/
