--- a/public/.htaccess
+++ b/public/.htaccess
@@ -1,49 +1,3 @@
-# DISABLE CACHING
-
-<IfModule mod_headers.c>
-ExpiresActive Off
-</IfModule>
-
-# dalsi info a priklady: https://kb.wedos.com/cs/webhosting/htaccess/htaccess-na-webhostingu
-
-RewriteEngine On
-
-# cele domeny (aliasy)
-
-RewriteCond %{REQUEST*URI} !^domains/
-RewriteCond %{REQUEST_URI} !^/domains/
-RewriteCond %{HTTP_HOST} ^(www\.)?(.*)$
-RewriteCond %{DOCUMENT*ROOT}/domains/%2 -d
-RewriteRule (.*) domains/%2/$1 [DPI]
-
-# subdomeny (s nebo bez www na zacatku)
-
-RewriteCond %{REQUEST*URI} !^subdom/
-RewriteCond %{REQUEST_URI} !^/subdom/
-RewriteCond %{HTTP_HOST} ^(www\.)?(.*)\.([^\.]_)\.([^\.]_)$
-RewriteCond %{DOCUMENT*ROOT}/subdom/%2 -d
-RewriteRule (.*) subdom/%2/$1 [DPI]
-
-# aliasy - spravne presmerovani pri chybejicim /
-
-RewriteCond %{REQUEST_FILENAME} -d
-RewriteRule ^domains/[^/]+/(.+[^/])$ /$1/ [R]
-
-# subdomeny - spravne presmerovani pri chybejicim /
-
-RewriteCond %{REQUEST_FILENAME} -d
-RewriteRule ^subdom/[^/]+/(.+[^/])$ /$1/ [R]
-
-# presmerovani http na https
-
-RewriteCond %{HTTPS} off [NC]
-RewriteRule ^(.\*)$ https://%{HTTP_HOST}%{REQUEST_URI} [R=301,L]
-
-# presmerovani www na non-www
-
-RewriteCond %{HTTP*HOST} ^www\.(.*)$ [NC]
-RewriteRule ^(.\_)$ https://%1/$1 [R=301,L]
-
-# 404 page
-
-ErrorDocument 404 /404.html
+RewriteEngine on
+RewriteCond %{HTTPS} !=on [NC]
+RewriteRule ^(.\*)$ https://%{HTTP_HOST}/$1 [R=301,L]
