--- a/public/.htaccess
+++ b/public/.htaccess
@@ -1,3 +1,11 @@
 RewriteEngine on
+
+# presmerovani www na non-www
+
+RewriteCond %{HTTP_HOST} ^www\.(._)$ [NC]
+RewriteRule ^(._)$ https://%1/$1 [R=301,L]
+
+# presmerovani http na https
+
 RewriteCond %{HTTPS} !=on [NC]
 RewriteRule ^(.\*)$ https://%{HTTP_HOST}/$1 [R=301,L]
