--- a/.github/workflows/pull-request.yml
+++ b/.github/workflows/pull-request.yml
@@ -29,3 +29,4 @@ jobs:
         uses: foo-software/lighthouse-check-action@master
         with:
           urls: ${{ fromJson(needs.build_and_preview.outputs.urls)[0] }}
+          gitHubAccessToken: '${{ secrets.GITHUB_TOKEN }}'
