--- a/.github/workflows/pull-request.yml
+++ b/.github/workflows/pull-request.yml
@@ -31,3 +31,9 @@ jobs:
           urls: ${{ fromJson(needs.build_and_preview.outputs.urls)[0] }}
           gitHubAccessToken: '${{ secrets.GITHUB_TOKEN }}'
           prCommentEnabled: true
+          outputDirectory: ${{ github.workspace }}/tmp/artifacts   
+    - name: Upload lighthouse report
+      uses: actions/upload-artifact@master
+      with:
+        name: Lighthouse reports
+        path: ${{ github.workspace }}/tmp/artifacts
