--- a/.github/workflows/pull-request.yml
+++ b/.github/workflows/pull-request.yml
@@ -28,6 +28,7 @@ jobs:
       - run: mkdir -p ${{ github.workspace }}/tmp/artifacts
       - name: Lighthouse
         uses: foo-software/lighthouse-check-action@master
+        id: lighthouseCheck
         with:
           urls: ${{ fromJson(needs.build_and_preview.outputs.urls)[0] }}
           gitHubAccessToken: '${{ secrets.GITHUB_TOKEN }}'
@@ -38,3 +39,11 @@ jobs:
         with:
           name: Lighthouse reports
           path: ${{ github.workspace }}/tmp/artifacts
+      - name: Verify Lighthouse Check results
+        uses: foo-software/lighthouse-check-status-action@master
+        with:
+          lighthouseCheckResults: ${{ steps.lighthouseCheck.outputs.lighthouseCheckResults }}
+          minAccessibilityScore: '50'
+          minBestPracticesScore: '50'
+          minPerformanceScore: '50'
+          minSeoScore: '50'
